# addon-storpool

./: .gitignore  CODEOWNERS  README.md  addon-storpoolrc  configuration_tips.md  install.sh  upgrade_notes.md
attic/: README-pre-5.2.0.md
datastore/: xpath-sp.rb  xpath_multi.py
docs/: advanced_configuration.md  configuration_tips.md  deploy_tweaks.md  install-5.4.0.md  install-5.6.0.md  installation.md  known_issues.md  migration_with_postcopy.md  naming_convention.md  one_configuration.md  optimal_vm_template_configuration.md  qosclass.md  quicktest.md  resizeCpuMem.md  supported_versions.json  supported_versions.yml  tips.md  uefi_boot.md  uefi_secure_boot.md  upgrade_notes-5.2.1.md  upgrade_notes-5.4.md  volumecare.md
hooks/: hookmux.sh  migrate2cgroupv2.py  net_fw_hook  resizeCpuMem.sh
misc/: 0reserved_resources.sh  90-diskresize.rules  MigrateTimeout-5.12.patch  qemu.py  (+37 more)
misc/kvchk/as_module/: README.md  requirements-dev.txt  requirements.txt  setup.cfg  setup.py  tox.ini
misc/kvchk/as_module/src/storpool_kvchk/: __init__.py  __main__.py  cli.py  py.typed  version.py
misc/kvchk/as_module/src/storpool_kvchk/managers/: base_manager.py  etcd_manager.py  one_manager.py  ssh_manager.py  storpool_manager.py
misc/kvchk/as_module/src/storpool_kvchk/models/: enums.py  exceptions.py
misc/kvchk/as_module/src/storpool_kvchk/processors/: data_processing.py
misc/kvchk/as_module/src/storpool_kvchk/utils/: arg_parser.py
misc/kvchk/as_module/tests/: test_data_corruption.py  test_etcd_manager.py  test_one_manager.py  test_ssh_manager.py  test_storpool_manager.py
(+237 files in other folders)
