[metadata]
name = storpool-kvchk
version = attr: storpool_kvchk.version.__version__
description = StorPool KV consistency check tool
author = StorPool
license = Apache-2.0

[options]
package_dir =
    = src
packages = find:
install_requires =
    pyone
    etcd3
    storpool
    protobuf<=3.20.3

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    sp-kvchk = storpool_kvchk.cli:main
